js/js.translator/testData/incremental/invalidation/eagerInitializationMoveBetweenModules/lib2/eagerB.1.kt
@OptIn(kotlin.ExperimentalStdlibApi::class)
@EagerInitialization
val markerB = run { z2 = true; 2 }
